# DataAnalysis_Efficiency_and_Diversity

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
data/: analysis_data.csv  cagr_analysis_data.csv  eu_efta_countries.csv  rd_p_bempoccr2.csv  scraper_data.csv  scraper_metadata.csv
notebooks/: analysis_code.ipynb  scraper_code.ipynb
py_codes/: analysis_code.py  custom.mplstyle  scraper_code.py
py_notebooks/: analysis_code.ipynb  custom.mplstyle  scraper_code.ipynb
reports/: Efficiency_and_Diversity_presentation.pptx  analysis_code_report.html  scraper_code_report.html
scripts/: analysis_code.py
